Added an abstract transformation class, and a fixed transformation class for opengl retained part of the occluded library

--- a/OccludedLibrary/OccludedLibrary.vcxproj
+++ b/OccludedLibrary/OccludedLibrary.vcxproj
@@ -175,13 +175,16 @@
     <ClInclude Include="buffers\attributes\attribute_map.h" />
     <ClInclude Include="buffers\attributes\attribute.h" />
     <ClInclude Include="buffers\interleaved_attr_buffer.h" />
-    <ClInclude Include="opengl\scene\objects\fixed_gl_camera.h" />
+    <ClInclude Include="opengl\retained\scene\nodes\gl_retained_fixed_transformation.h" />
+    <ClInclude Include="opengl\retained\scene\objects\gl_retained_fixed_camera.h" />
     <ClInclude Include="meshes\mesh.h" />
     <ClInclude Include="opengl\retained\gl_retained_mesh.h" />
     <ClInclude Include="opengl\retained\shaders\shader_attribute_map.h" />
     <ClInclude Include="opengl\retained\shaders\shader_uniform_store.h" />
-    <ClInclude Include="opengl\scene\objects\gl_retained_camera.h" />
+    <ClInclude Include="opengl\retained\scene\objects\gl_retained_camera.h" />
+    <ClInclude Include="scene\nodes\transformation.h" />
     <ClInclude Include="scene\objects\camera.h" />
+    <ClInclude Include="scene\objects\model.h" />
     <ClInclude Include="utilities\files\file_reader.h" />
     <ClInclude Include="opengl\retained\gl_attribute_buffer.h" />
     <ClInclude Include="opengl\retained\shaders\shader.h" />
@@ -195,11 +198,12 @@
     <ClCompile Include="buffers\attributes\attribute_map.cpp" />
     <ClCompile Include="buffers\attributes\attribute.cpp" />
     <ClCompile Include="buffers\interleaved_attr_buffer.cpp" />
-    <ClCompile Include="opengl\scene\objects\fixed_gl_camera.cpp" />
+    <ClCompile Include="opengl\retained\scene\nodes\gl_retained_fixed_transformation.cpp" />
+    <ClCompile Include="opengl\retained\scene\objects\gl_retained_fixed_camera.cpp" />
     <ClCompile Include="opengl\retained\gl_retained_mesh.cpp" />
     <ClCompile Include="opengl\retained\shaders\shader_attribute_map.cpp" />
     <ClCompile Include="opengl\retained\shaders\shader_uniform_store.cpp" />
-    <ClCompile Include="opengl\scene\objects\gl_retained_camera.cpp" />
+    <ClCompile Include="opengl\retained\scene\objects\gl_retained_camera.cpp" />
     <ClCompile Include="utilities\files\file_reader.cpp" />
     <ClCompile Include="opengl\retained\gl_attribute_buffer.cpp" />
     <ClCompile Include="opengl\retained\shaders\shader.cpp" />
