--- a/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj.filters
+++ b/OccludedLibraryUnitTests/OccludedLibraryUnitTests/OccludedLibraryUnitTests.vcxproj.filters
@@ -68,10 +68,13 @@
     <ClCompile Include="gl_retained_mesh_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="fixed_gl_camera_test.cpp">
+    <ClCompile Include="gl_retained_camera_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="gl_retained_camera_test.cpp">
+    <ClCompile Include="gl_retained_fixed_camera_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="gl_retained_fixed_transformation_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
